--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({
           google_ad_client: "ca-pub-8491708950677704",
-          enable_page_level_ads: true
+          enable_page_level_ads: false
      });
 </script>
 <link href="style.css?v=2.053" rel="stylesheet" type="text/css">
@@ -34,21 +34,6 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 	#ifIE9{display:block;}
 </style>
 <![endif]-->
-
-<!--[if lt IE9]><script src="excanvas.compiled.js"></script><![endif]-->
-<!-- Facebook Pixel Code -->
-	<script>
-	!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-	n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
-	n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
-	t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
-	document,'script','https://connect.facebook.net/en_US/fbevents.js');
-	fbq('init', '357399801355203');
-	fbq('track', 'PageView');
-	</script>
-	<noscript><img height="1" width="1" style="display:none"
-	src="https://www.facebook.com/tr?id=357399801355203&ev=PageView&noscript=1"></noscript>
-<!-- end code -->
 </head>
 <body>
 <div id="wrapper">
@@ -71,15 +56,8 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 			<div class="hoverable">
 			<!-- This one doesnt show for some reason :/ --> <a href="https://wackube.github.io/Cookie_Clicker/" target="_blank" id="linkVersionLive">v. 2.031</a>
 			<a href="https://orteil.dashnet.org/cookieclicker/" target="_blank">Official Site</a>
-			<a href="https://wackube.github.io/Cookie_Clicker/" target="_blank" id="linkVersionBeta">v. 2.031 site 1</a>
-			<a href="http://ozh.github.io/cookieclicker/" target="_blank">v. 2.031 site 2</a>
-			<a href="https://funneljai212.github.io/cookie-clicker-source-code-1/" target="_blank">v. 2.031 site 3</a>
-			<a href="https://xenogames224.github.io/cookieclickerxeno/" target="_blank" id="linkVersionOld">v. 2.022</a>
-			<a href="https://trixter9994.github.io/Cookie-Clicker-Source-Code/" target="_blank">v. 2.021 beta site 1</a>
-			<a href="https://3kh0.github.io/cookie-clicker/" target="_blank">v. 2.021 beta site 2</a>
-			<a href="https://wolfy01.github.io/Cookie-Clicker/" target="_blank">v. 2.0042</a>
-			<a href="https://eli-schwartz.github.io/cookieclicker/" target="_blank">v. 1.0411</a>
-			<!-- <a href="LINK" target="_blank">NAME</a> -->
+			<button onclick="Game.LoadMod('https://icehawk78.github.io/FrozenCookies/frozen_cookies.js');">Load Frozen Cookies</button>
+			<button onclick="Game.LoadMod('/cookiemonster.js')">Cookie Monster</button>			<!-- <a href="LINK" target="_blank">NAME</a> -->
 			</div>
 		</div>
 			<div style="
