--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 			<div class="hoverable">
 			<!-- This one doesnt show for some reason :/ --> <a href="https://wackube.github.io/Cookie_Clicker/" target="_blank" id="linkVersionLive">v. 2.031</a>
 			<a href="https://orteil.dashnet.org/cookieclicker/" target="_blank">Official Site</a>
-			<button onclick="Game.LoadMod('https://icehawk78.github.io/FrozenCookies/frozen_cookies.js');">Load Frozen Cookies</button>
-			<button onclick="Game.LoadMod('/cookiemonster.js')">Cookie Monster</button>			<!-- <a href="LINK" target="_blank">NAME</a> -->
+				<!-- <a href="LINK" target="_blank">NAME</a> -->
 			</div>
 		</div>
 			<div style="
@@ -73,6 +72,8 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 			<a href="javascript: (function () {Game.LoadMod('https://cookiemonsterteam.github.io/CookieMonster/dist/CookieMonster.js');}());" id="linkVersionBeta">Cookie Monster</a>
 			<a href="javascript: (function () {Game.LoadMod('https://klattmose.github.io/CookieClicker/KlattmoseUtilities.js?v=2.16');}());" id="linkVersionOld">Klattmose's Utilities</a>
 			<a href="addons.html" target="_blank">More Addons</a>
+			<button onclick="Game.LoadMod('https://icehawk78.github.io/FrozenCookies/frozen_cookies.js');">Load Frozen Cookies</button>
+			<button onclick="Game.LoadMod('/cookiemonster.js')">Cookie Monster</button>		
 			</div>
 		</div>
 	</div>
@@ -82,9 +83,9 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 			<div id="loader">
 				<div class="spinnyBig"></div>
 				<div class="spinnySmall"></div>
-				<div id="loading" class="title">It Loading...</div>
-				<div id="failedToLoad" class="title">This is taking too much long.<br>
-				<div style="font-size:65%;line-height:120%;">Slow connection? If not, please make sure your javascript is enabled, then refresh.<br>
+				<div id="loading" class="title">Loading...</div>
+				<div id="failedToLoad" class="title">This is taking very long.<br>
+				<div style="font-size:65%;line-height:120%;">No IQ points? If not, please make sure your javascript is enabled, then refresh.<br>
 				If problems persist, this might be on our side - wait a few minutes, then hit ctrl+f5!</div></div>
 				<div id="ifIE9" class="title" style="font-size:100%;line-height:120%;">Your browser may not be recent enough to run Cookie Clicker.<br>You might want to update, or switch to a more modern browser such as Chrome or Firefox.</div>
 				<!--<div class="title">Oops, looks like we've got a problem.</div>
